--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://AnaBelen-jp.github.io/",
-  "name": "portfolio-anabelen",
+  "homepage": "https://anabelen-jp.github.io/",
+  "name": "anabelenjimenezpajuelo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
